# word_counter

./: .gitignore  LICENSE  README.md  docker-compose.yml
count_service/: Dockerfile  Guide.md  client.py  docker-compose.yml  requirements.txt  server.py  word_count.proto  word_count_pb2.py  word_count_pb2_grpc.py
count_service/client/: Dockerfile  client.py  requirements.txt  word_count_pb2.py  word_count_pb2_grpc.py  word_counter_pb2.py  word_counter_pb2_grpc.py
count_service/proto/: word_count_pb2.py  word_count_pb2_grpc.py
count_service/server/: Dockerfile  requirements.txt  server.py  word_count.proto
count_service/server/texts/: 1.txt  2.txt  test.txt
counter_client/: Cargo.toml  Dockerfile
counter_client/src/: main.rs
counter_service/: Cargo.toml  Dockerfile  build.rs
counter_service/src/: counter_server.rs  main.rs  read_counter.rs
counter_service/src/proto_gen/: word_counter.rs
counter_service/texts/: Titanic.txt
grafana/provisioning/dashboards/: ads-lab.json  dashboard.yaml
grafana/provisioning/datasources/: datasource.yaml
load_balancer/: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs
load_balancer/src/: consts.rs  endpoint.rs  load_balancer.rs  main.rs  metrics.rs  server.rs  strategy.rs
load_balancer/src/config/: endpoints.toml  load_balancer.toml  server.toml  server_test.toml
load_balancer/src/config_test/: endpoints_test.toml  endpoints_test_invalid.toml  load_balancer_test.toml
load_balancer/src/model/: endpoints_config.rs  load_balancer_config.rs  server_config.rs
load_balancer/src/strategy/: context.rs  hash_lb.rs  round_robin.rs  weighted_round_robin.rs
prometheus/: prometheus.yml
proto/: word_count.proto  word_counter.proto
