[package]
name = "counter_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
once_cell = "1.20.2"
tonic = "0.12.3"
prost = "0.13.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
fake = "2.10.0"
rayon = "1.10.0"
indicatif = "0.17.8"
async-std = { version = "1.13.0", features = ["attributes"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }

[build-dependencies]
tonic-build = "0.12"
