[package]
name = "counter_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
tonic = "0.12.3"
prost = "0.13.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
fake = "2.10.0"
indicatif = "0.17.8"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "full"] }
futures = "0.3.31"

[build-dependencies]
tonic-build = "0.12"
