[package]
name = "load_balancer"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.3"
prost = "0.13"
log = "0.4.22"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
toml = "0.8.19"
anyhow = "1.0.89"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
async-trait = "0.1.83"
futures = "0.3.31"
async-std = { version = "1.13.0", features = ["attributes"] }
once_cell = "1.20.2"
mockall = "0.13.0"
tonic-health = "0.12.3"
ctrlc = "3.4.5"

[build-dependencies]
tonic-build = "0.12"
